--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -11,6 +11,7 @@
 
 <a href="exercicio1.html" class="button">Exercício 1</a>
 <a href="exercicio2.html" class = button>Exercício 2</a>
-    
+<a href="exercicio3.html" class="button">Exercício 3</a> 
+
 </body>
 </html>
