--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 
-<a href="exercicio1.html" class="button">Exercício 1<br>Maior número</a>
-<a href="exercicio2.html" class = button>Exercício 2<br>Positivo ou negativo</a>
-<a href="exercicio3.html" class="button">Exercício 3<br>Masculino ou feminino</a> 
-<a href="exercicio4.html" class="button">Exercício 4<br>Consoante ou vogal</a>
-<a href="exercicio5.html" class="button">Exercício 5<br>Divisivel por 5</a>
+<a href="/Exercicios_htm/exercicio1.html" class="button">Exercício 1<br>Maior número</a>
+<a href="/Exercicios_htm/exercicio2.html" class = button>Exercício 2<br>Positivo ou negativo</a>
+<a href="/Exercicios_htm/exercicio3.html" class="button">Exercício 3<br>Masculino ou feminino</a> 
+<a href="/Exercicios_htm/exercicio4.html" class="button">Exercício 4<br>Consoante ou vogal</a>
+<a href="/Exercicios_htm/exercicio5.html" class="button">Exercício 5<br>Divisivel por 5</a>
+<a href="/Exercicios_htm/exercicio6.html" class="button">Exercício 6<br> Intervalo entre 20 e 90</a>
 </body>
 </html>
