--- a/Atividades_Js/Exercicios_htm/exercicio2.html
+++ b/Atividades_Js/Exercicios_htm/exercicio2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 2</title>
-    <script src = '/Atividades_Js/exercicios.js'></script>
+    <script src = '/exercicios.js'></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
