--- a/Atividades_Js/Exercicios_htm/exercicio1.html
+++ b/Atividades_Js/Exercicios_htm/exercicio1.html
@@ -20,6 +20,9 @@
         <button type='button' onclick='encontrarMaior()'>Verificar</button>
     </form>
 
+    <a href="/index.html">Voltar</a>
+
+
     <p id = 'exercicio1'> </p>
 
 
