--- a/Atividades_Js/Exercicios_htm/exercicio2.html
+++ b/Atividades_Js/Exercicios_htm/exercicio2.html
@@ -17,6 +17,9 @@
        <button type ="button" onclick="positivoNegativo()"> Resultado </button>
     </form>
 
+    <a href="/index.html">Voltar</a>
+
+
     <p id = 'exercicio2'> </p>
 
 </body>
