--- a/Atividades_Js/Exercicios_htm/exercicio4.html
+++ b/Atividades_Js/Exercicios_htm/exercicio4.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <h1>Consoante ou vogal</h1>
-    <form>
-        <label for="letra">Digite a letra: </label>
-        <input type ='text' id = 'letra' step = 'any' required>
-        <br><br>
-        <button type = 'button' onclick='vogalConsoante()'>Resultado</button>
-    </form>
+    
+    
+    <input type ='text' id = 'letra' placeholder="Digite uma letra">
+    <button onclick='vogalConsoante()'>Submit</button>
 
     <p id = 'exercicio4'></p>
 
+    <a href="/index.html">Voltar</a>
 </body>
 </html>
