--- a/Atividades_Js/Exercicios_htm/exercicio5.html
+++ b/Atividades_Js/Exercicios_htm/exercicio5.html
@@ -15,6 +15,9 @@
     <br><br>
     <button type = 'button' onclick="divisivel()">Resultado</button>
     </form>
+
+    <a href="/index.html">Voltar</a>
+
     <p id = 'exercicio5'></p>
 </body>
 </html>
