--- a/Atividades_Js/Exercicios_htm/exercicio3.html
+++ b/Atividades_Js/Exercicios_htm/exercicio3.html
@@ -10,14 +10,13 @@
 <body>
     
      <h1>Masculino ou Feminino</h1>   
-    <form>
-        <label for="letra"> Digite a letra: </label>
-        <input type="text" id="letra" step="any" required>
-        <br><br>
-        <button type ="button" onclick="masculinoFeminino()">Resultado</button>
-    </form>
+   
+        <input type="text" id="letra" placeholder="Digite uma letra">
+        <button onclick="masculinoFeminino()">Resultado</button>
 
     <p id = "exercicio3"></p>
+
+    <a href="/index.html">Voltar</a>
 
 </body>
 </html>
