--- a/Atividades_Js/Exercicios_htm/exercicio6.html
+++ b/Atividades_Js/Exercicios_htm/exercicio6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício 5</title>
     <script src = '/exercicios.js'></script>
     <link rel = 'stylesheet' href="/style.css"> 
 </head>
@@ -18,6 +18,8 @@
         <button type = 'button' onclick="intervalo()">Resultado</button>
     </form>
 
+    <a href="/index.html">Voltar</a>
+    
     <p id = 'exercicio6'></p>
 
 </body>
