--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <script src='/Atividades_Js/exercicio1.js'></script>
-    <link rel="stylesheet" href="style.css">
+    <title>Alinhar Botões</title>
+    <link rel = 'stylesheet' href="style.css">
 </head>
 <body>
-<a href="/Exercicios_htm/exercicio1.html" class="button">Exercício 1<br>Maior número</a>
-<a href="/Exercicios_htm/exercicio2.html" class = button>Exercício 2<br>Positivo ou negativo</a>
-<a href="/Exercicios_htm/exercicio3.html" class="button">Exercício 3<br>Masculino ou feminino</a> 
-<a href="/Exercicios_htm/exercicio4.html" class="button">Exercício 4<br>Consoante ou vogal</a>
-<a href="/Exercicios_htm/exercicio5.html" class="button">Exercício 5<br>Divisivel por 5</a>
-<a href="/Exercicios_htm/exercicio6.html" class="button">Exercício 6<br> Intervalo entre 20 e 90</a>
+    <div class="button-container">
+    <a href="exercicios.html"><button>Lista 1</button></a>
+        <button>Botão 2</button>
+        <button>Botão 3</button>
+    </div>
 </body>
 </html>
