--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alinhar Botões</title>
-    <link rel = 'stylesheet' href="style.css">
+    <link rel = 'stylesheet' href="/style.css">
 </head>
-<body>
-    <div class="button-container">
-    <a href="exercicios.html"><button>Lista 1</button></a>
-        <button>Botão 2</button>
-        <button>Botão 3</button>
-    </div>
+
+<div class="container">
+    <img src="/assets/images/JavaScript-logo (1).png">
+    <h1>Atividades Javascript<br><p class = "subtitulo">Atividades da matéria de Desenvolvimento Web 1</p></h1>
+    
+</div>
+
 </body>
 </html>
