--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -9,8 +9,14 @@
 
 <div class="container">
     <img src="/assets/images/JavaScript-logo (1).png">
-    <h1>Atividades Javascript<br><p class = "subtitulo">Atividades da matéria de Desenvolvimento Web 1</p></h1>
-    
+    <h1>Atividades Javascript
+    <p class = "subtitulo">Atividades da matéria de Desenvolvimento Web 1</p></h1>
+</div>
+
+<div class="button-container">
+    <a href="/exercicios.html"><button class="button">Lista 1</button></a>
+    <button class="button">Lista 2</button>
+    <button class="button">Lista 3</button>
 </div>
 
 </body>
