--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -14,9 +14,9 @@
 </div>
 
 <div class="button-container">
-    <a href="/exercicios.html"><button class="button">Lista 1</button></a>
-    <button class="button">Lista 2</button>
-    <button class="button">Lista 3</button>
+    <a href="/exercicios.html"><button class="button-index">Lista 1</button></a>
+    <button class="button-index">Lista 2</button>
+    <button class="button-index">Lista 3</button>
 </div>
 
 </body>
