--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -7,10 +7,13 @@
     <link rel = 'stylesheet' href="/style.css">
 </head>
 
+
 <div class="container">
+    <div class="container-index">
     <img src="/assets/images/JavaScript-logo (1).png">
     <h1>Atividades Javascript
     <p class = "subtitulo">Atividades da matéria de Desenvolvimento Web 1</p></h1>
+    </div>
 </div>
 
 <div class="button-container">
