--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -11,14 +11,14 @@
 <div class="container">
     <div class="container-index">
     <img src="/assets/images/JavaScript-logo (1).png">
-    <h1>Atividades Javascript
+    <h1 style="margin: 0px; padding: 0px;" >Atividades Javascript
     <p class = "subtitulo">Atividades da matéria de Desenvolvimento Web 1</p></h1>
     </div>
 </div>
 
 <div class="button-container">
-    <a href="/exercicios.html"><button class="button-index">Lista 1</button></a>
-    <button class="button-index">Lista 2</button>
+    <a href="/Exercicios1_html/index.html"><button class="button-index">Lista 1</button></a>
+    <a href="/Exercicios2_html/index.html"><button class="button-index">Lista 2</button></a>
     <button class="button-index">Lista 3</button>
 </div>
 
