--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -17,9 +17,9 @@
 </div>
 
 <div class="button-container">
-    <a href="/Exercicios1_html/index.html"><button class="button-index">Lista 1</button></a>
-    <a href="/Exercicios2_html/index.html"><button class="button-index">Lista 2</button></a>
-    <button class="button-index">Lista 3</button>
+    <a href="/lista1/index.html"><button class="button-index">Lista 1</button></a>
+    <a href="/lista2/index.html"><button class="button-index">Lista 2</button></a>
+    <a href="/lista3/index.html"><button class="button-index">Lista 3</button></a>
 </div>
 
 </body>
