--- a/Atividades_Js/lista2/index.html
+++ b/Atividades_Js/lista2/index.html
@@ -11,7 +11,7 @@
     <h1 style="text-align: center;">Lista de exercicios 2</h1>
     
     <div class = 'botao-exercicio2'>
-        <a href="/Exercicios2_html/exercicio1.html" class = 'button'>Exercicio 1<br>Checar proposta</a>
+        <a href="/lista2/exercicio1.html" class = 'button'>Exercicio 1<br>Checar proposta</a>
     </div>
 
 
