--- a/Atividades_Js/lista1/exercicio7.html
+++ b/Atividades_Js/lista1/exercicio7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 7</title>
-    <script src = '/exercicios.js'></script>
+    <script src = '/js/exercicios1.js'></script>
     <link rel = 'stylesheet' href="/style.css">
 </head>
 <body>
