--- a/Atividades_Js/lista1/index.html
+++ b/Atividades_Js/lista1/index.html
@@ -11,16 +11,16 @@
 
     <h1 style="text-align: center;">Lista de exercicios 1</h1>
 <div class = 'button-exercicios1'>
-<a href="/Exercicios1_html/exercicio1.html" class="button">Exercício 1<br>Maior número</a>
-<a href="/Exercicios1_html/exercicio2.html" class = button>Exercício 2<br>Positivo ou negativo</a>
-<a href="/Exercicios1_html/exercicio3.html" class="button">Exercício 3<br>Masculino ou feminino</a> 
-<a href="/Exercicios1_html/exercicio4.html" class="button">Exercício 4<br>Consoante ou vogal</a>
-<a href="/Exercicios1_html/exercicio5.html" class="button">Exercício 5<br>Divisivel por 5</a>
-<a href="/Exercicios1_html/exercicio6.html" class="button">Exercício 6<br> Intervalo entre 20 e 90</a>
-<a href="/Exercicios1_html/exercicio7.html" class="button">Exercício 7<br> Maior de idade</a>
-<a href="/Exercicios1_html/exercicio8.html" class="button">Exercício 8<br> Média</a>
-<a href="/Exercicios1_html/exercicio9.html" class="button">Exercício 9<br> Maior maior</a>
-<a href="/Exercicios1_html/exercicio10.html" class="button">Exercício 10<br> Impar ou par</a>
+<a href="/lista1/exercicio1.html" class="button">Exercício 1<br>Maior número</a>
+<a href="/lista1/exercicio2.html" class = button>Exercício 2<br>Positivo ou negativo</a>
+<a href="/lista1/exercicio3.html" class="button">Exercício 3<br>Masculino ou feminino</a> 
+<a href="/lista1/exercicio4.html" class="button">Exercício 4<br>Consoante ou vogal</a>
+<a href="/lista1/exercicio5.html" class="button">Exercício 5<br>Divisivel por 5</a>
+<a href="/lista1/exercicio6.html" class="button">Exercício 6<br> Intervalo entre 20 e 90</a>
+<a href="/lista1/exercicio7.html" class="button">Exercício 7<br> Maior de idade</a>
+<a href="/lista1/exercicio8.html" class="button">Exercício 8<br> Média</a>
+<a href="/lista1/exercicio9.html" class="button">Exercício 9<br> Maior maior</a>
+<a href="/lista1/exercicio10.html" class="button">Exercício 10<br> Impar ou par</a>
 </div>
 
 </body>
