--- a/Atividades_Js/lista2/test.html
+++ b/Atividades_Js/lista2/test.html
@@ -3,22 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio - Calcular Curtidas</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Teste da Função Proposta</title>
     <script src="/js/exercicios2.js" defer></script>
 </head>
 <body>
-    <div>
-        <h1>Calcular Número de Curtidas</h1>
-
-        <!-- Campo de entrada para o número de dias -->
-        <input type="number" id="dias" placeholder="Insira o número de dias">
-
-        <!-- Botão para calcular o resultado, chamando a função diretamente -->
-        <button onclick="numeroCurtidas()">Calcular</button>
-
-        <!-- Parágrafo onde o resultado será exibido -->
-        <p id="exercicio22"></p>
-    </div>
+    <input type="number" id="proposta" placeholder="Digite o valor">
+    <button id="calcular" onclick="proposta()">Calcular</button>
+    <div id="exercicio21"></div>
 </body>
 </html>
