--- a/Atividades_Js/exercicios/exercicio1.html
+++ b/Atividades_Js/exercicios/exercicio1.html
@@ -8,29 +8,31 @@
     <link rel = 'stylesheet' href="/css/style.css">
 </head>
 <body>
-    <div class = 'container-exercicios'>
-        <div class = 'exercicios-container' >
-            <h1>Cálculo de Diferença</h1>
-            <label for="proposta">Valor da proposta:</label>
-            <input type="text" id="proposta" placeholder="Digite o valor da proposta">
-            <button onclick="exibirDiferenca()">Calcular Diferença</button>
-            <p id="resultado-proposta"></p>
+    <div class="container-exercicios">
+        <div class="container-label">
+        <h2>Calcular Diferença entre Valor Pago e Proposta</h2>
+        <form onsubmit="event.preventDefault(); exibirDiferenca();">
+            <label for="proposta">Valor da Proposta:</label>
+            <input type="number" id="proposta" name="proposta" step="0.01" required>
+
+            <button type="submit">Calcular Diferença</button>
+        </form>
+        <p>Diferença: <span id="resultado-proposta">0</span></p>
         </div>
-        <div id="input-section">
-            <label id="input-label">Digite a nota inicial:</label>
-            <input type="text" id="nota-inicial" placeholder="Nota Inicial">
-            <button onclick="avancar()">Próximo</button>
+        <div class="container-label-2">
+        <h2>Calcular Nota Final com Base nos Tweets</h2>
+        <form onsubmit="event.preventDefault(); exibirNotaFinal();">
+            <label for="nota-inicial">Nota Inicial:</label>
+            <input type="number" id="nota-inicial" name="nota-inicial" step="0.01" required>
+
+            <label for="tweets-ano">Número de Tweets no Ano:</label>
+            <input type="number" id="tweets-ano" name="tweets-ano" required>
+
+            <button type="submit">Calcular Nota Final</button>
+        </form>
+        <p>Nota Final: <span id="resultado-nota-final">0</span></p>
         </div>
-        <div id="input-section-tweets" style="display: none;">
-            <label id="input-label-tweets">Digite o número de tweets:</label>
-            <input type="text" id="tweets-ano" placeholder="Número de Tweets">
-            <button onclick="exibirNotaFinal()">Calcular Nota Final</button>
-        </div>
-        <p id="resultado-nota-final"></p>
     </div>
-
-<script>function avancar(){document.getElementById("input-section").style.display = 'none'; document.getElementById("input-section-tweets").style.display = 'block';}</script>
-
 
 </body>
 </html>
