--- a/Atividades_Js/exercicios/exercicio1.html
+++ b/Atividades_Js/exercicios/exercicio1.html
@@ -8,8 +8,8 @@
     <link rel = 'stylesheet' href="/css/style.css">
 </head>
 <body>
-    <div class="container-exercicios">
-        <div class="container-label">
+    <div class="exercicios-container">
+        <div class="label-container">
         <h2>Calcular Diferença entre Valor Pago e Proposta</h2>
         <form onsubmit="event.preventDefault(); exibirDiferenca();">
             <label for="proposta"></label>
@@ -19,7 +19,7 @@
         </form>
         <p>Diferença: <span id="resultado-proposta">0</span></p>
         </div>
-        <div class="container-label-2">
+        <div class="label-container">
         <h2>Calcular Nota Final com Base nos Tweets</h2>
         <form onsubmit="event.preventDefault(); exibirNotaFinal();">
             <label for="nota-inicial"></label>
