--- a/Atividades_Js/index.html
+++ b/Atividades_Js/index.html
@@ -6,7 +6,7 @@
     <title>Alinhar Botões</title>
     <link rel = 'stylesheet' href="/css/style.css">
 </head>
-
+<body>
 
 <div class="index-container">
     <img src="/assets/images/JavaScript-logo (1).png">
@@ -16,10 +16,11 @@
     </div>
 </div>
 
-<div class="button-container">
-    <a href="/lista1/index.html"><button class="button-index">Lista 1</button></a>
-    <a href="/lista2/index.html"><button class="button-index">Lista 2</button></a>
-    <a href="/lista3/index.html"><button class="button-index">Lista 3</button></a>
+<div class="index-button-container">
+    <a href="/exercicios/exercicio1.html"><button class="index-button">Lista 1</button></a>
+    <a href="/exercicios/exercicio2.html"><button class="index-button">Lista 2</button></a>
+    <a href="/exercicios/exercicio3.html"><button class="index-button">Lista 3</button></a>
+    <a href="/exercicios/exercicio4.html"><button class="index-button">Lista 4</button></a>
 </div>
 
 </body>
